--- a/core/implementazione_comunicazione.tex
+++ b/core/implementazione_comunicazione.tex
@@ -61,7 +61,7 @@ Prima di procedere con il gioco vero e proprio, tramite un'interfaccia
 TurnOrderInterface ciascun client si connette ai propri avversari e richiede ad 
 essi un numero pseudocasuale, che viene usato per stabilire l'ordine di gioco 
 nel modo seguente: il numero restituito viene concatenato al nome utente 
-dell'avversario, l'ordine alfabetico di tali stringhe concatenate viene usato 
+dell'avversario, l'ordine alfabetico delle stringhe così costruite viene usato 
 poi per ordinare la lista di giocatori. In questo modo si ha un tie-breaker nel 
 caso in cui i numeri pseudo casuali siano uguali.
 \\
