--- a/core/progettazione_vista.tex
+++ b/core/progettazione_vista.tex
@@ -2,14 +2,14 @@
 
 
 Dal punto di vista dell'interfaccia esposta all’utente, il gioco si biforca a seconda che
-si avvii il lobby server o il client. Nel caso del server, all’amministratore della stanza
+si avvii il lobby server o il nodo. Nel caso del server, all’amministratore della stanza
 viene fornito un pannello che consente l’avvio della partita a sua discrezione. Vengono
-inoltre visualizzati username, IP e porta di tutti i client.
+inoltre visualizzati username, IP e porta di tutti i peer.
 Nel caso del gioco vero e proprio, viene dapprima richiesto all’utente a quale stanza
 desideri unirsi (la scelta viene semplificata mostrando una lista di server correntemente attivi).
 Proseguendo è stata inserita una animazione che, ironicamente, fa intuire il motivo del nome del gioco.
 Successivamente egli immette lo username con cui vorrà registrarsi e la posizione delle pecore sul
-proprio campo di battaglia. Il client mostra dunque una schermata di attesa, prima
+proprio campo di battaglia. Il nodo mostra dunque una schermata di attesa, prima
 che la lobby gli comunichi i partecipanti e la partita possa iniziare.
 Vi è infine la schermata di gioco, che consente all’utente di specificare la posizione e
 il giocatore da attaccare. Essa fornisce inoltre uno storico delle mosse effettuate da
