--- a/core/valutazione.tex
+++ b/core/valutazione.tex
@@ -1,13 +1,13 @@
 I test da noi effettuati hanno evidenziato la capacità del software di gestire 
-guasti di tipo crash su uno qualsiasi dei client durante la comunicazione. Se 
+guasti di tipo crash su uno qualsiasi dei nodi durante la comunicazione. Se 
 la gestione di return parziali ha causato un leggero aumento della complessità 
 del codice, tali errori non causano più inconsistenze durature, permettendo ai 
-client di accordarsi autonomamente rispetto all'ordine delle mosse effettuate.
+peer di accordarsi autonomamente rispetto all'ordine delle mosse effettuate.
 \\
-L'implementazione della discovery delle lobby da parte dei client consente 
+L'implementazione della discovery delle lobby da parte dei nodi consente 
 inoltre di fornire all'utente una semplice scelta delle stanze di gioco, senza 
 assumere che essi conoscano a priori l'indirizzo IP. Naturalmente 
-tale funzionalità è utile solo nel caso in cui i client si connettano ad un IP 
+tale funzionalità è utile solo nel caso in cui i peer si connettano ad un IP 
 della propria sottorete, in quanto è impensabile fare discovery fra reti 
 eterogenee senza prevedere un qualche server di appoggio esterno.
 \\
